feat(quest): add claim-join-channel api and logic
