# src/controllers/quests.js
@@ -1,4 +1,5 @@
-import { claimDaily as claimDailyService, getOverview as getOverviewService } from '../services/quests.js';
+import { ROOT_CHANNEL } from '../constants/channels.js';
+import { claimChannelQuest as claimChannelQuestService, claimDaily as claimDailyService, getOverview as getOverviewService } from '../services/quests.js';
 
 // Get an overview of the quests
 export const getOverview = async (req, res) => {
@@ -17,5 +18,16 @@ export const claimDaily = async (req, res) => {
     res.send({ message: 'Daily quest claimed', point });
   } catch (error) {
     res.status(500).send({ message: 'Error claiming daily quest', error: error.message });
+  }
+};
+
+// Claim the channel quest
+export const claimJoinChannel = async (req, res) => {
+  try {
+    const { channelUsername } = req.body;
+    const point = await claimChannelQuestService(req.telegramId, channelUsername ?? ROOT_CHANNEL);
+    res.send({ message: 'Claimed join channel quest', point });
+  } catch (error) {
+    res.status(500).send({ message: 'Error claiming channel quest', error: error.message });
   }
 };
